# magnet

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: auto-assign.yml  ci.yml  cmake.yml  codeql.yml  docker-build.yml
magnet/: main.cpp
magnet.xcodeproj/: project.pbxproj
magnet.xcodeproj/xcuserdata/futureblur.xcuserdatad/xcschemes/: xcschememanagement.plist
magnet/Source/: Application.cpp  Application.h  CMakeLists.txt  CmakeEmitter.cpp  CmakeEmitter.h  CommandHandler.cpp  CommandHandler.h  Core.h  EntryPoint.cpp  PCH.h  Project.cpp  Project.h
magnet/Source/Platform/: LinuxPlatform.cpp  Platform.h  WindowsPlatform.cpp  macOSPlatform.cpp
magnet/Templates/MAGNET_NEW_PROJECT/: .gitignore  README.md  Template_CMakeLists.txt
magnet/Templates/MAGNET_NEW_PROJECT/MAGNET_NEW_PROJECT/Dependencies/: Template_CMakeLists.txt
magnet/Templates/MAGNET_NEW_PROJECT/MAGNET_NEW_PROJECT/Source/: PCH.h  Template_CMakeLists.txt  main.cpp
scripts/: LinuxInstaller.sh  Makefile.sh  Ninja.sh  Unix.sh  VS22.sh  WindowsInstaller (Ninja).bat  WindowsInstaller (Visual Studio 2022).bat  WindowsInstaller.bat  Xcode.sh  macOSInstall.sh  macOSInstaller.sh
